# smart-recommend-coin

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
examples/: solscan.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  api.ts  main.js  style.css
frontend/src/assets/: main.css
frontend/src/components/: Index.vue  Nav.vue  Recommend.vue  Solana.vue
frontend/src/router/: index.ts
frontend/src/store/: navigation.js
frontend/src/views/: HomeView.vue  SolanaView.vue
migrations/: 20240418022542_init.sql
src/: capture_address.rs  db.rs  gmgn.rs  lib.rs  main.rs
src/capture/: gmgn.rs  mod.rs  solscan.rs
src/models/: address.rs  address_token.rs  mod.rs  token.rs
src/services/: address_service.rs  mod.rs  token_service.rs
