[package]
name = "smart-recommend-coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
chrono = "0.4.38"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
anyhow = "1.0.82"
tracing = "0.1.40"
